--- a/bin/package.json
+++ b/bin/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "sandboxinstruction.com",
+  "name": "SASS_qs_forthelazy",
+  "author": "Jack Harrison",
+  "url": "DaisyRanch.org",
   "version": "0.0.1",
+  "repository": "https://github.com/JackBeNimbleBeQuick/sass_qs_forthelazy.git",
   "description": "Implementation of \"How do I do stuff\"",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "jack harrison",
   "license": "Don't Do Bad Stuff",
   "dependencies": {
+  },
+  "devDependencies": {
     "fs": "0.0.1-security",
     "graceful-fs": "^4.1.11",
     "node-sass": "^4.5.0",
-    "requirejs": "^2.1.18",
     "sass": "^0.5.0",
-    "selenium-webdriver": "^2.47.0"
-  },
-  "devDependencies": {
     "cli": "^1.0.1",
     "gulp": "^3.9.1",
     "gulp-cli": "^1.2.2",
@@ -23,9 +20,6 @@
     "gulp-jshint": "^2.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-typescript": "^3.1.4",
-    "gulp-uglify": "^2.0.1",
-    "jasmine": "^2.5.3",
-    "jshint": "^2.9.4"
+    "gulp-uglify": "^2.0.1"
   }
 }
