--- a/bin/package.json
+++ b/bin/package.json
@@ -11,10 +11,14 @@
     "gulp-jshint": "^2.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-typescript": "^4.0.1",
     "gulp-uglify": "^3.0.0",
+    "gulp-webpack": "^1.5.0",
     "jasmine": "^3.1.0",
     "jshint": "^2.9.4",
     "path": "^0.12.7",
+    "run-sequence": "^2.2.1",
+    "shelljs": "^0.8.1",
     "ts-loader": "^4.1.0",
     "typescript": "^2.7.2",
     "webpack": "^4.2.0",
