Updating to new gulp 4 and wire Webpack into the mix .provides npm package upgrades to install without warnings 8^) .provides the working webpack setup .provides enough ts to js in webpack to prove the point .updates the README 8^) ; time for a beer, last one to the pub buys

--- a/bin/tsconfig.json
+++ b/bin/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "es6",
     "target": "es5",
     "preserveConstEnums": true,
-    "outDir": "js/",
+    "outDir": "build/",
     "baseUrl": "",
     "watch": false,
     "allowJs": true,
@@ -13,7 +13,7 @@
     "ts/app.ts",
   ],
   "filesGlob":[
-    "/**/*.ts"
+    "**/*.ts"
   ],
   "lib":[
     "es6",
