--- a/bin/package.json
+++ b/bin/package.json
@@ -5,24 +5,30 @@
   "main": "js/app.js",
   "dependencies": {},
   "devDependencies": {
-    "glob": "^7.1.1",
-    "gulp": "^3.9.1",
+    "@babel/core": "^7.0.0-beta.46",
+    "@babel/register": "^7.0.0-beta.46",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
+    "glob": "^7.1.2",
+    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-concat": "^2.6.1",
-    "gulp-jshint": "^2.0.4",
+    "gulp-jshint": "^2.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-typescript": "^4.0.1",
+    "gulp-sass": "^4.0.1",
+    "gulp-typescript": "^4.0.2",
     "gulp-uglify": "^3.0.0",
-    "gulp-webpack": "^1.5.0",
-    "jasmine": "^3.1.0",
-    "jshint": "^2.9.4",
+    "jshint": "^2.9.5",
     "path": "^0.12.7",
     "run-sequence": "^2.2.1",
-    "shelljs": "^0.8.1",
-    "ts-loader": "^4.1.0",
-    "typescript": "^2.7.2",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.13"
+    "rx": "^4.1.0",
+    "script-loader": "^0.7.2",
+    "shelljs": "^0.8.2",
+    "ts-loader": "^4.3.0",
+    "typescript": "^2.8.3",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
+    "webpack-stream": "^4.0.3"
   },
   "scripts": {},
   "repository": {
