Adding Clean Task and Some package clean up

--- a/bin/package.json
+++ b/bin/package.json
@@ -10,7 +10,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
-    "hoek": "^4.2.1",
+    "fs": "0.0.1-security",
     "glob": "^7.1.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-concat": "^2.6.1",
@@ -19,6 +19,7 @@
     "gulp-sass": "^4.0.1",
     "gulp-typescript": "^4.0.2",
     "gulp-uglify": "^3.0.0",
+    "hoek": "^4.2.1",
     "jshint": "^2.9.5",
     "path": "^0.12.7",
     "run-sequence": "^2.2.1",
