--- a/bin/tsconfig.json
+++ b/bin/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "es6",
     "target": "es5",
     "preserveConstEnums": true,
-    "outDir": "build/",
+    "outDir": "js/",
     "baseUrl": "",
     "watch": false,
     "allowJs": true,
