Updating webpack.config to aling with gulp tasks

--- a/bin/package.json
+++ b/bin/package.json
@@ -17,10 +17,12 @@
     "gulp-jshint": "^2.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^4.0.2",
     "gulp-uglify": "^3.0.0",
     "hoek": "^4.2.1",
     "jshint": "^2.9.5",
+    "node-sass": "^4.9.0",
     "path": "^0.12.7",
     "run-sequence": "^2.2.1",
     "rx": "^4.1.0",
