--- a/bin/package.json
+++ b/bin/package.json
@@ -18,6 +18,7 @@
     "@babel/register": "^7.0.0-beta.46",
     "@types/es6-shim": "^0.31.37",
     "@types/node": "^10.3.0",
+    "@types/webpack-stream": "^3.2.10",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
