--- a/bin/package.json
+++ b/bin/package.json
@@ -50,15 +50,15 @@
     "util": "^0.10.3",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
-    "webpack-serve": "^1.0.2",
-    "webpack-stream": "^4.0.3"
+    "webpack-dev-server": "^3.1.4"
   },
   "directories": {
     "ts": "ts",
     "test": "tests"
   },
   "scripts": {
-    "start": "node serve.js"
+    "start": "webpack-dev-server --open --mode development",
+    "build": "./node_modules/.bin/webpack"
   },
   "repository": {
     "type": "git",
