Providing event removal on componentWillUnmount()

--- a/bin/package.json
+++ b/bin/package.json
@@ -16,14 +16,17 @@
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.46",
     "@babel/register": "^7.0.0-beta.46",
+    "@types/enzyme": "^3.1.10",
     "@types/es6-shim": "^0.31.37",
     "@types/node": "^10.3.0",
-    "@types/webpack-stream": "^3.2.10",
+    "ajv": "^6.5.1",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "child_process": "^1.0.2",
     "csstype": "^2.5.3",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "glob": "^7.1.2",
@@ -35,8 +38,8 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^4.0.2",
     "gulp-uglify": "^3.0.0",
-    "hoek": "^4.2.1",
     "jest": "^23.1.0",
+    "jest-enzyme": "^6.0.2",
     "jshint": "^2.9.5",
     "node-sass": "^4.9.0",
     "path": "^0.12.7",
