--- a/bin/package.json
+++ b/bin/package.json
@@ -18,6 +18,7 @@
     "@babel/register": "^7.0.0-beta.46",
     "@types/enzyme": "^3.1.10",
     "@types/es6-shim": "^0.31.37",
+    "@types/jest": "^23.1.1",
     "@types/node": "^10.3.0",
     "ajv": "^6.5.1",
     "babel-cli": "^6.26.0",
